Average time between activities

--- a/lib/stream.html
+++ b/lib/stream.html
@@ -48,6 +48,7 @@
         </li>
       </ul>
       <hr>
+      <p tal:condition="haveTime">Mean time between activities: <i tal:content="time">x</i> seconds (this may be inaccurate shortly after a server restart)</p>
       <p>Hubub by <a href="http://owenshepherd.net">Owen Shepherd</a>. Feed from
         <a href="http://ofirehose.com">OFirehose</a>. Activities by <em>awesome
         people and robots</em> (and spammers. we don't like them very much 
